# kryptos

./: .gitignore  AGENT_PROMPT.md  CLAUDE.md  MEMORY.md  PROGRESS.md  README.md  RUNBOOK.md  agent_analysis.json  agent_logs  anomaly_registry.md  artifacts  bootstrap_report.json  exhaustion_log.json  framework_inventory.json  k4_agent_harness.sh  k4_job_runner.sh  k4_launch_all.sh  kryptos_organize.py  kryptosbot_results.db  manifest.json  run_attack.py  run_lean.py  tmp  work  worker.py
kryptosbot/: .env.template  RUNBOOK.md  __init__.py  campaign.py  config.py  database.py  diag_sdk.py  diag_sdk2.py  english_quadgrams.txt  horologe_deep.py  kryptosbot_results.db  monitor.py  pyproject.toml  run_bespoke_reasoning.py  run_blitz_campaign.py  run_custom_campaign.py  run_kryptosbot.py  run_lean.py  run_split_campaign.py  solve.py  solve_v2.py
kryptosbot/kbot_results/: agent_analysis_raw.txt  bespoke_campaign_summary.json  bespoke_cipher_design.md  ckm_hand_cipher.md  columnar_results.json  final_viability_assessment.md  keyword_results.json  master_summary.json  receiver_identity.md  receiver_identity_raw.txt  simple_ciphers.json  statistical_profile.json  two_systems_analysis.md  unscramble_results.json
kryptosbot/kryptosbot/: __init__.py  agent_runner.py  api_client.py  compute.py  config.py  database.py  framework_strategies.py  hypothesis_tester.py  k4_tools.py  orchestrator.py  sdk_wrapper.py  strategies.py  worker.py
kryptosbot/split_results/: alphabet_mapping_keys.json  derivation_chains.json  master_summary.json  positional_keys.json  tableau_keys.json  (+2 more)
(+1553 files in other folders)
